Fixed spacing on mobile

--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -3,15 +3,19 @@
     height: 400px;
     width: 310px;
     margin: .5rem .5rem;
-    padding: 3rem;
-    padding-top: 2rem;
+    padding: 2rem;
+    padding-top: 1.5rem;
     color: $color-light-text;
     
     &__title {
         color: $color-light-text;
+        white-space: nowrap
+    }
+    &__form {
+        margin-top: 2rem;
     }
     .form__submit {
-        margin-top: 3rem;
+        margin-top: 0rem;
     }
 }
 
